update guile-rs cargo.toml to LGPL
The LICENSE file was updated to reflect the license change, but it still shows up at GPL-3.0 on crates.io.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["David Li <li.davidm96@gmail.com>"]
 
 description = "Safe bindings to GNU Guile."
 repository = "https://github.com/lidavidm/guile-rs"
-license = "GPL-3.0"
+license = "LGPL-3.0"
 
 [dependencies]
 libc="0.2"
